Made a modification to the dockerfile so itll hopefully work when it gets sent to the hostinger vps via docker manager github https url thang

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     <div id="landing-page" class="landing-container">
         <div class="landing-content">
             <h1>UmiMatch</h1>
-            <p>Find Your Perfect Match</p>
+            <p>It Worked!</p>
             <button id="launch-btn" class="launch-button">Launch UmiMatch</button>
         </div>
     </div>
