Updated index.html to see if our CI/CD deployment works
via out github actions workflow sending it to our vps hostinger's docker manager

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     <div id="landing-page" class="landing-container">
         <div class="landing-content">
             <h1>UmiMatch</h1>
-            <p>It Worked!</p>
+            <p>Welcome!</p>
             <button id="launch-btn" class="launch-button">Launch UmiMatch</button>
         </div>
     </div>
