Added Logout Button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,9 @@
 
     <div id="app-modal" class="modal hidden">
         <div class="modal-content">
+            <!-- MODAL CLOSE BUTTON (X) - TOP RIGHT -->
+            <button class="modal-close" onclick="document.getElementById('app-modal').classList.add('hidden')">✕</button>
+            
             <div id="app-container"></div>
         </div>
     </div>
